# lazyplot

./: LICENSE  README.md  example.ipynb  pyproject.toml
lazyplot/: __init__.py  config.py  plot.py
