[project]
name = "lazyplot"
version = "0.1.1"
description = "Add your description here"
authors = [
    { name = "hiroh", email = "hirohata0116@gmail.com" }
]
dependencies = [
    "matplotlib>=3.7.5",
    "numpy>=1.24.4",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "lazyplot:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pip>=24.2",
    "twine>=5.1.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/lazyplot"]
